# Promethius

./: .gitignore  CHANGES.md  README.md
.github/: pull_request_template.md
AgentHub/: README.md
AgentHub/AgentHubMobile/: AgentHubMobileApp.swift
AgentHub/AgentHubMobile/Notifications/: PushHandler.swift
AgentHub/AgentHubMobile/Views/: AgentDetailView.swift  GlanceView.swift  MissionControlView.swift
AgentHub/AgentHubMobile/Widgets/: AgentStatusWidget.swift
AgentHub/AgentHubTests/ViewModelTests/: README.md
Promethius/: AgentView.swift  ContentView.swift  DashboardView.swift  PromethiusApp.swift  TesMCP.swift
Promethius.xcodeproj/: project.pbxproj
PromethiusTests/: PromethiusTests.swift
PromethiusUITests/: PromethiusUITests.swift
agent-harness/: .env.example  CLAUDE.md  main.py  pyproject.toml  server.py  tool.py
agent-harness/archive/: agent.py
agent-harness/core/: loop.py
agent-harness/docs/: AGENT_ARCHITECTURE.md  ISSUES.md  MEMORY_DESIGN.md  MOBILE_EDGE_NOTES.md  README.md
agent-harness/docs/Understanding/: jsonrpc_and_mcp_protocol.md  llm_response_shapes.md  loop_events_for_a_frontend.md  mcp_function_interactions.md  mcp_stream_lifetime_bug.md  openai_sdk_and_response_shapes.md  python_logging_module.md  streaming_chat_completions.md  switching_to_lm_studio.md
agent-harness/docs/research/: MOBILE_EDGE_NOTES.md  learning_agent_architecture.md
agent-harness/mcp_client/: client.py
agent-harness/ollama/: qwen3-14b-agent.Modelfile
agent-harness/providers/: base.py  local.py
agent-harness/tools/: example_tools.py
docs/: BRANCHING.md
(+43 files in other folders)
