[project]
name = "agent-harness"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "mcp>=1.28.1",
    "openai>=1.0,<2",
    "python-dotenv>=1.2.2",
    "typing-extensions>=4.16.0",
    "uvicorn>=0.51.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
